[package]
name = "ton-liteserver-client"
version = "0.5.0"
edition = "2024"
rust-version.workspace = true

[build-dependencies]
tl-parser = { path = "../tl-parser" }
anyhow = { version = "1.0.102", features = ["backtrace"] }
quote = "1.0.45"
syn = "2.0.117"
prettyplease = "0.2.37"
convert_case = "0.11.0"

[dependencies]
adnl-tcp = { path = "../adnl-tcp", features = ["client"] }
ton-client-util = { path = "../ton-client-util" }
toner = "0.7.4"
toner-tlb-macros = { path = "../toner-tlb-macros" }
anyhow = { version = "1.0.102", features = ["backtrace"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tower = { version = "0.5.3", features = ["full"] }
tracing = "0.1.44"
pin-project = "1.1.10"
rand = "0.10.0"
thiserror = "2.0.17"
futures = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["sync"] }
dashmap = "6.1.0"
tokio-retry = "0.3.0"
hex = "0.4.3"
num-bigint = "0.4.6"

[dev-dependencies]
base64 = "0.22.1"
tracing-test = "0.2.6"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
testcontainers = "0.27.1"
testcontainers-ton = { path = "../testcontainers-ton" }

[features]
testnet = []
