[package]
name = "ton-tower"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
ton-address = { path = "../ton-address" }
pin-project = "1.1.13"
tower = { version = "0.5.3", features = ["full"] }
anyhow = "1.0.102"
futures = "0.3.32"
thiserror = "2.0.18"
metrics = "0.24.6"
tokio = "1.52.3"
tokio-retry = "0.3.2"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt"] }
mockall = "0.14"
tracing-test = "0.2.6"
