[package]
name = "toner-tlb-macros"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"

[dev-dependencies]
toner = { workspace = true }
trybuild = "1"
