[package]
name = "tonlibjson-client"
version = "0.20.5"
edition = "2024"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
tonlibjson-sys = { path = "../tonlibjson-sys" }
ton-client-util = { path = "../ton-client-util" }
tower = { version = "0.5.3", features = ["full"] }
tokio = { version = "1.50.0", features = ["full"] }
anyhow = { version = "1.0.102", features = ["backtrace"] }
futures = "0.3.32"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio-stream = { version = "0.1.18", features = ["sync"] }
base64 = "0.22.1"
hex = "0.4.3"
async-stream = "0.3.6"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
dashmap = "6.1.0"
pin-project = "1.1.10"
rand = "0.10.0"
bytes = "1.11.1"
thiserror = "2.0.17"
reqwest = { version = "0.13.2", features = ["default-tls", "hickory-dns"], default-features = false }
hickory-resolver = "0.25.2"
itertools = "0.14.0"
metrics = "0.24.2"
tokio-retry = "0.3.0"
derive-new = "0.7.0"
crc = "3.4.0"

[dev-dependencies]
tracing-test = "0.2.6"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
tl-parser = { path = "../tl-parser" }
anyhow = { version = "1.0.102", features = ["backtrace"] }
quote = "1.0.45"
syn = "2.0.117"
prettyplease = "0.2.37"
convert_case = "0.11.0"

[features]
testnet = ["tonlibjson-sys/testnet"]
