[package]
name = "tonlibjson-sys"
version = "0.7.0"
edition = "2024"
rust-version.workspace = true
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
license = "MIT"
links = "tonlibjson"
description = "Rust binding for tonlibjson from https://github.com/ton-blockchain/ton"
repository = "https://github.com/getgems-io/ton-grpc"

[dependencies]
libc = "0.2.186"
anyhow = { version = "1.0.103", features = ["backtrace"] }
tracing = "0.1.44"

[build-dependencies]
cc = "1.2.67"
cmake = "0.1.58"
pkg-config = "0.3.32"
walkdir = "2.5"

[dev-dependencies]
static_assertions = "1.1.0"

[features]
default = []
testnet = []
bundled = []
