[package]
name = "tvm-grpc"
version = "0.8.0"
edition = "2024"
rust-version.workspace = true
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
tonlibjson-sys = { path = "../tonlibjson-sys" }
tokio = { version = "1.51.0", features = ["full"] }
futures = "0.3.32"
anyhow = { version = "1.0.102", features = ["backtrace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
async-stream = "0.3.6"
tonic = { version = "0.14.5", features = ["gzip"] }
tonic-prost = "0.14.5"
tonic-reflection = "0.14.5"
tonic-health = "0.14.5"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio-stream = { version = "0.1.18", features = ["sync"] }
humantime = "2.3.0"
quick_cache = "0.6.21"
clap = { version = "4.6.0", features = ["derive"] }
uuid = { version = "1.23.0", features = ["v4", "fast-rng", "serde"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
